--- a/style.css
+++ b/style.css
@@ -1,294 +1,240 @@
-.gird-1{
-    border: 1px solid #ffffff;
-    background-color: black;
-    display: flex;
-    justify-content: space-around;
-    gap: 100px;
+*{
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
 }
-.gird-2{
-font-size: 24px;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-color: #ffffff;
-cursor: pointer;
-}
-.gird-2:hover{
-    color: #202020;
-    }
-.gird-5{
-    color: #f79f24;
-}
-.grid-image{
-    border: 1px solid black;
-    height: 35px;
-    width: 35px;
-    border-radius: 50px;
-}
-.gird-3{
-    color: #7d7c7d;
-}
-.gird-4{
-    color: #c2b4a2;
-}
-.grid-container{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-}
-.flex{
-    border: 1px solid #ffffff;
-    margin-top: 20px;
-    background-color: #ffffff;
-    height: 54px;
-    gap: 305px;
-    display: flex;
-    justify-content: space-around;
-
-}
-.navbar-1{
-    border: 1px solid #ffffff;
-    display: inline; 
-    margin-top: 40px;
-    font-size: 13px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #202020;
-}
-.navbar:hover{
-   border: 1px solid #ffffff;
-   color: #fffff8;
-   background-color: #f79f24;
-   cursor: pointer;
-}
-.navbar-2{
-    border: 1px solid #ffffff;
-    display: inline; 
-    margin-top: 40px;
-    font-size: 13px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #202020;
-    margin-left: 10px;
-    margin-top: 60px;
-}
-.image-1{
-    border: 1px solid #f1f1f1;
-    height: 425px;
-    width: 1250px;
-}
-.content-first{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #f79f24;
-    font-size: 12px;
-    text-align: center;
-    margin-top: 104px;
-}
-.content-two{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #333333;
-    text-align: center;
-    font-size: 24px;
-}
-.grid-container-2{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 93px;
-    margin-left: 160px;
-}
-.grid-content-one{
-    font-size: 18px;
-    font-family: sans-serif;
-    color: #000000;
-}
-.grid-content-two{
-font-family: sans-serif;
-font-size: 14px;
-color: #898989;
-margin-top: 30px;
-}
-.grid-button{
-border-bottom: 1px solid  #e6e6e6;
-color: #333333;
-display: inline;
-margin-top: 34px;
-cursor: pointer;
-}
-.grid-content-first{
-    font-size: 18px;
-    font-family: sans-serif;
-    color: #000000;
-    margin-top: 45px;
-}
-.grid-container-3{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.image-2{
-    border: 1px solid #fffff8;
-    margin-top: 140px;
-    height: 592px;
-    width: 555px;
-    margin-left: 74px;
-}
-.grid-content-three{
-  border: 1px solid #fffff8;
-  background-color: #fffff8;
-  height: 545px;
-  width: 560px;
-  margin-top: 139px;
-}
-.content-10{
-    margin-left: 10px;
-    margin-top: 40px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    color: #f7a83b;
-}
-.content-11{
-    margin-left: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    color: #323233;
-}
-.content-12{
-    margin-left: 10px;
-    border: 1px solid #fffff8;
-    display: inline;
-    height: 137px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    color: #8a8a8b;
-    margin-top: 20px;
-}
-.content-13{
-    margin-left: 10px;
-    border: 1px solid #fffff8;
-    display: inline;
-    height: 137px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    color: #8a8a8b;
-    margin-top: 20px;
-}
-.grid-button-1{
-    margin-left: 10px;
-    border: 1px solid #fffff8;
-    color: #ebf0fb;
-    background-color: #064acb;
-    height: 38px;
-    width: 169px;
-    border-radius: 10px;
-    margin-top: 30px;
-    cursor: pointer;
-}
-.grid-button-2{
-    border: 1px solid #fffff8;
-    color: #2a2a2a;
-    background-color: #fffff8;
-    height: 38px;
-    width: 169px;
-    border-radius: 10px;
-    margin-top: 30px;
-    margin-left: 10px;
-    cursor: pointer;
-}
-.flex-conteiner{
-    border: 1px solid #fffff8;
-    margin-top: -5.3px;
-    height: 200px;
+.top-bar-wrapper{
     background-color: #202020;
+}
+.top-bar-content{
+    height: 90px;
+    display: flex;
+    align-items: center;
+    gap: 350px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.top-bar-content-1st{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 22px;
+    color: #ffffff;
+    cursor: pointer;
+}
+.top-bar-content-1st:hover{
+color: rgb(0, 0, 0);
+transition: 0.4s;
+}
+.top-bar-info-wrapper {
     display: flex;
     justify-content: space-around;
-    
-}
-.flex-content-1{
-    color: #f79f24;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 38px;
-    margin-top: 65px;
-    text-align: center;
-}
-.flex-content-2{
-    color: #bababa;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    text-align: center;
-    margin-top: -30px;
-}
-.grid-container-9{
-   background-color: #f79f24; 
-   height: 620px;
+    align-items: center;
+    gap: 50px;
+  }
 
-}
-.image-3{
-    border: 1px solid #fffff8;
-    width: 631px;
-    height: 620px;
-    margin-top: -1px;
-}
-.grid-container-5{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.grid-content-seven{
-    margin-top: 61px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    margin-left: 49px;
-}
-.grid-content-eight{
-    margin-top: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    margin-left: 49px;
-}
-.dropdown{
-    border: 1px solid #fffff8;
-    width: 517px;
-    height: 56px;
-    margin-left: 49px;
-    border-radius: 5px;
-}
-.flex-content-6{
+  .top-bar-info {
     display: flex;
-    align-items: space-between;
-    gap: -20px;
+    gap: 20px;
+    align-items: center;
+  }
+  .info-icon-wrapper {
+    width: 35px;
+    height: 35px;
+    border: 1px solid orange;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .info-icon {
+    color: orange;
+    font-size: 14px;
+  }
+  .top-bar-info1 {
+    color: rgb(173, 173, 173);
+    margin-bottom: 8px;
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+  .top-bar-info2 {
+    text-transform: uppercase;
+    font-size: 12px;
+    color: rgb(245, 243, 243);
+  }
+
+  .top-bar-social-media {
+    display: flex;
+    gap: 5px;
+  }
+
+  .social-icon-wrapper {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: rgb(82, 81, 81);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+  }
+  .social-icon {
+    cursor: pointer;
+    color: white;
+    font-weight: 100;
+  }
+  .social-icon-wrapper:hover {
+    background: orange;
+  }
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 57px;
+  }
+.navbar-content{
+    display: flex;
+    align-items: center;
+    background-color: #ffffff;
+   
+}
+.navbar-info{
+    margin-left: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 26px;
     
 }
-.flex-content-7{
-    border: 1px solid #fffff8;
-    width: 228px;
-    height: 55px;
-    margin-top: 11px;
-    border-radius: 5px;
-    margin-left: 49px;
-    color: #969696;
-    background-color: #ffffff;
+.navbar-item{
+    font-size: 16px;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   margin-top: auto;
+   
 }
-.flex-content-18{
-    border: 1px solid #fffff8;
-    width: 235px;
-    height: 55px;
-    margin-top: 11px;
-    border-radius: 5px;
-    margin-left: 49px;
-    color: #969696;
-    background-color: #ffffff;
+.navbar-item.active{
+  background-color: #f79f24;
+  height: 57px;
+ display: flex;
+ align-items: center;
+ width: 65px;
+ padding-left: 18px;
+ color: #fffff8;
 }
-.text-area{
-    border: 1px solid #fffff8 ;
-    width: 514px;
-    height: 162px;
-    margin-top: 11px;
-    border-radius: 5px;
-    margin-left: 49px;
-    color: #969696;
+.navbar-item:hover{
+  background-color: #f79f24;
+  height: 57px;
+  display: flex;
+  align-items: center;
+  width: 65px;
+  padding-left: 9px;
+}
+.search-bar {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 75px;
+  background: #f1f1f1;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
 
+.search-input {
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 5px;
+  font-size: 14px;
+  width: 243px;
+  height: 30px;
 }
-.button-5{
-    border: 1px solid #f79f24;
-    height: 51px;
-    width: 520px;
-    border-radius: 5px;
-    text-align: center;
-    margin-left: 49px;
-    color: #cdced0;
-    background-color: #343a40;
-    margin-top: 11px;
+.search-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: bold;
+  font-size: 16px;
+}
+.co-section{
+  display: flex;
+  min-height: 100vh;
+  height: 688px;
+  width: 1265px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+}
+.slider{
+  width: 1265px;
+  height: 688px;
+  background: url(i_n.png);
+  animation: slide 10s linear infinite;
+}
+@keyframes slide{
+  0%{
+    background: url(i_n.png);
+  }
+  50%{
+    background: url(i_n.png); 
+  }
+  51%{
+    background: url(j_n.png);  
+  }
+  100%{
+    background: url(j_n.png);  
+  }
+}
+.section-4{
+  display: flex;
+  align-items: space-around;
+}
+.section-4-div-1{
+  display: flex;
+  align-items: space-around;
+  border: 1px solid;
+  height: 100px;
+  width: 671px;
+  background-color: #064acb;
+  gap: 15px;
+  margin-top: -20px;
+  margin-left: -1px;
+}
+.flaticon-repair{
+  color: white;
+  font-size: 24px;
+  border: 1px solid #4c7dda;
+  border-radius: 50px;
+  padding: 15px;
+  margin-top: 29px;
+  margin-left: 80px;
+}
+.content{
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #ffffff;
+  margin-top: 55px;
+}
+.box-content-11{
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #4973d4;
+  margin-top: 56px; 
+}
+.content-1{
+  border: 1px solid;
+  background-color: #f79f24;
+  height: 100px;
+  width: 240px;
+  margin-top: -20px;
+  margin-left: -1px;
+  border-left: #064acb;
+}
+.content-1:hover{
+background-color: #3d7cf0;
+}
+.content-2{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  margin-top: 45px;
+  color: rgb(0, 0, 0);
+  margin-left: 45px;
 }
